cloud
phat@phat:~ $ cd ~/Documents/ce_comedians/project
source venv/bin/activate
(venv) phat@phat:~/Documents/ce_comedians/project $ pip3 install blynklib
Looking in indexes: https://pypi.org/simple, https://www.piwheels.org/simple
Collecting blynklib
  Downloading https://www.piwheels.org/simple/blynklib/blynklib-0.2.6-py3-none-any.whl.metadata (14 kB)
Downloading https://www.piwheels.org/simple/blynklib/blynklib-0.2.6-py3-none-any.whl (15 kB)
Installing collected packages: blynklib
Successfully installed blynklib-0.2.6

[notice] A new release of pip is available: 24.0 -> 26.1.1
[notice] To update, run: pip install --upgrade pip
(venv) phat@phat:~/Documents/ce_comedians/project $ cd ~/Documents/ce_comedians/project
source venv/bin/activate
(venv) phat@phat:~/Documents/ce_comedians/project $ python3 main.py
  File "/home/phat/Documents/ce_comedians/project/main.py", line 627
    distracted_now = abs(yaw_rel) > (YAW_EXIT_THRESHOLD if distracted_state else YAWYAW_ENTER_THRESHOLD := YAW_ENTER_THRESHOLD)
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot use assignment expressions with conditional expression
(venv) phat@phat:~/Documents/ce_comedians/project $ python3 main.py
2026-05-28 11:15:08.072518999 [W:onnxruntime:Default, device_discovery.cc:283 GetGpuDevices] Failed to detect devices under "/sys/class/drm/card1": device_discovery.cc:93 ReadFileContents Failed to open file: "/sys/class/drm/card1/device/vendor"
2026-05-28 11:15:08.072663638 [W:onnxruntime:Default, device_discovery.cc:283 GetGpuDevices] Failed to detect devices under "/sys/class/drm/card0": device_discovery.cc:93 ReadFileContents Failed to open file: "/sys/class/drm/card0/device/vendor"
Error in cpuinfo: prctl(PR_SVE_GET_VL) failed
INFO: Created TensorFlow Lite XNNPACK delegate for CPU.
WARNING: All log messages before absl::InitializeLog() is called are written to STDERR
W0000 00:00:1779941708.331937    6697 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.
W0000 00:00:1779941708.380098    6697 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.
qt.qpa.plugin: Could not find the Qt platform plugin "wayland" in "/home/phat/Documents/ce_comedians/project/venv/lib/python3.11/site-packages/cv2/qt/plugins"
W0000 00:00:1779941715.454131    6699 landmark_projection_calculator.cc:186] Using NORM_RECT without IMAGE_DIMENSIONS is only supported for the square ROI. Provide IMAGE_DIMENSIONS or use PROJECTION_MATRIX.
^C
[OS SIGNAL] Nhận được tín hiệu ngắt 2. Đang chuyển trạng thái sang SAVING_DATA...

[INFO] Giải phóng tài nguyên Camera và cửa sổ UI...

============================================================
[BLYNK] BẮT ĐẦU TIEN TRÌNH ĐỒNG BỘ CLOUD...
  - Pin V1 (Buon ngu): 0
  - Pin V2 (Nhin lech): 0
  - Pin V3 (Khong co mat): 4
  - Pin V4 (Su dung DT): 0
  - Pin V5 (Hanh vi khac): 3
============================================================
[ERROR] Thiếu thư viện 'blynk-library-python'. Hãy cài đặt bằng lệnh: pip install blynk-library-python
[INFO] Chương trình đã kết thúc hoàn toàn.
(venv) phat@phat:~/Documents/ce_comedians/project $ ^C
(venv) phat@phat:~/Documents/ce_comedians/project $ ^C
(venv) phat@phat:~/Documents/ce_comedians/project $ ^C
(venv) phat@phat:~/Documents/ce_comedians/project $ 
